tests/agl/rejections/type/for_range_assign_loop_var.agl
for i in 1 to 5 do
  i := i + 1
done
